syntax = "proto3";

option csharp_namespace = "Learnify.VideoProcessing.gRPC";

package upload_manager;

service UploadManager {
  rpc GetPresignedURL (GetPresignedURLRequest) returns (GetPresignedURLResponse);
}

message GetPresignedURLRequest {
  string file_name = 1;
  int32 expiration = 2;
}

message GetPresignedURLResponse {
  string url = 1;
  int32 expiration = 2;
}

